--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@firebase/util": "^0.4.1",
     "core-js": "^3.6.5",
-    "firebase": "^8.4.1",
+    "firebase": "^8.10.0",
     "materialize-css": "^1.0.0-rc.2",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
